some css plus html changes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     <!--
       Browser tab title
     -->
-    <title>Coco | Portfolio</title>
+    <title>CK den Elzen | Portfolio</title>
 
     <!--
       Main stylesheet (ensure this path matches your folder structure)
     -->
     <link rel="stylesheet" href="./styles/general.css" />
+
+    <!-- Linking my favicon for the website, so it looks more professional-->
+
+    <link rel="icon" type="image/x-icon" href="./images/Ontwerp_zonder_titel-removebg-preview.png" class="favicon" >
+
   </head>
 
   <body>
@@ -29,7 +34,11 @@
     -->
     <header class="topbar">
       <nav class="topbar__nav" aria-label="Primary navigation">
-        <a class="topbar__brand" href="#about">COCO</a>
+        <figure>
+          <a href="index.html">
+            <img src="images/Ontwerp_zonder_titel-removebg-preview.png" alt="logo" class="topbar__brand">
+          </a>
+        </figure>
 
         <ul class="topbar__menu">
           <li><a href="#about">About</a></li>
@@ -143,6 +152,14 @@
                 Interned at Criteo in Barcelona, gaining hands-on experience in programmatic advertising.
               </p>
             </article>
+
+            <article class="timeline__item">
+              <h3 class="card-title">Netherlands → Professional Career</h3>
+              <p class="card-text">
+                After working for Criteo in Barcelona I moved back to the Netherlands and started my professional career here as a Campaign Manager for Criteo.
+              </p>
+            </article>
+
           </div>
         </div>
       </section>
@@ -160,7 +177,7 @@
 
           <div class="cards">
             <article class="card">
-              <p class="badge">Amazon</p>
+              <p class="badge badge__amazon">Amazon</p>
               <h3 class="card-title">Account Manager</h3>
               <p class="card-text">
                 Managing programmatic campaigns, aligning strategy with performance goals,
@@ -169,7 +186,7 @@
             </article>
 
             <article class="card">
-              <p class="badge">Criteo</p>
+              <p class="badge badge__criteo">Criteo</p>
               <h3 class="card-title">Campaign Manager</h3>
               <p class="card-text">
                 Started as an intern and grew into a full-time role, with international experience along the way.
@@ -177,10 +194,10 @@
             </article>
 
             <article class="card">
-              <p class="badge">Strengths</p>
-              <h3 class="card-title">Strategy • Data • People</h3>
+              <p class="badge badge__coco">Strengths</p>
+              <h3 class="card-title">Strategy • Data • Creativity</h3>
               <p class="card-text">
-                I enjoy roles at the intersection of strategic thinking, analytics, and collaboration.
+                I operate at the intersection of strategic thinking, data, and creativity, using sharp analysis and inventive thinking to turn ambitious ideas into high-impact outcomes.              
               </p>
             </article>
           </div>
