grid template fix

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="topbar__nav" aria-label="Primary navigation">
         <figure>
           <a href="index.html">
-            <img src="images/Ontwerp_zonder_titel-removebg-preview.png" alt="logo" class="topbar__brand">
+            <img src="images/Favicon CV.png" alt="logo" class="topbar__brand">
           </a>
         </figure>
 
@@ -219,9 +219,11 @@
             <article class="tile">
               <div class="tile__thumb" aria-hidden="true"></div>
               <div class="tile__body">
-                <p class="tile__kicker">HTML • CSS</p>
+                <p class="tile__kicker">HTML • CSS • JavaScript</p>
                 <h3 class="card-title">Portfolio Layout System</h3>
-                <p class="card-text">Responsive layout practice using grid and flex patterns.</p>
+                <p class="card-text">
+                  I build responsive, high-performance e-commerce experiences, engineered with precision tracking to power performance marketing and measurable growth.
+                </p>
               </div>
             </article>
 
@@ -230,16 +232,20 @@
               <div class="tile__body">
                 <p class="tile__kicker">Learning</p>
                 <h3 class="card-title">Code Learning Journal</h3>
-                <p class="card-text">Tracking progress and notes while teaching myself to code.</p>
+                <p class="card-text">
+                  I am deepening my understanding of JavaScript and core web technologies like HTML and CSS, building the foundation to support and scale future-focused e-commerce platforms.
+                </p>
               </div>
             </article>
 
             <article class="tile">
               <div class="tile__thumb" aria-hidden="true"></div>
               <div class="tile__body">
-                <p class="tile__kicker">UI</p>
-                <h3 class="card-title">Catalog Components</h3>
-                <p class="card-text">Reusable tiles and cards inspired by modern product UIs.</p>
+                <p class="tile__kicker">Agency Building</p>
+                <h3 class="card-title">Seclicks Agency</h3>
+                <p class="card-text">
+                  I am currently building my own performance marketing agency, focused on helping small to mid-sized e-commerce businesses sharpen their digital strategy and accelerate online growth.
+                </p>
               </div>
             </article>
           </div>
