--- a/index.html
+++ b/index.html
@@ -264,9 +264,12 @@
           </header>
 
           <ul class="accent-list">
-            <li>Build confidence with modern layout patterns (Grid + Flexbox).</li>
-            <li>Create clean, editorial-style portfolio projects.</li>
-            <li>Learn to translate design inspiration into code.</li>
+            <li>
+              Build the Seclicks Agency during 2026.
+            </li>
+            <li>
+              Learn to translate design inspiration into code.
+            </li>
           </ul>
         </div>
       </section>
@@ -277,7 +280,10 @@
       - Minimal, clean, and consistent with the bright theme
     -->
     <footer class="footer">
-      <p>© 2026 Coco • Built with HTML + CSS</p>
+      <p><strong>© 2026 CK den Elzen</strong> • c.denelzen@seclicks.com</p>
+      <p><strong>LinkedIn</strong> <a href="www.linkedin.com/in/cocodenelzen" target="_blank">www.linkedin.com/in/cocodenelzen
+
+</a></p>
     </footer>
   </body>
 </html>
