--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     -->
     <footer class="footer">
       <p><strong>© 2026 CK den Elzen</strong> • c.denelzen@seclicks.com</p>
-      <p><strong>LinkedIn</strong> <a href="www.linkedin.com/in/cocodenelzen" target="_blank">www.linkedin.com/in/cocodenelzen
+      <p><strong>LinkedIn</strong> <a href="www.linkedin.com/in/cocodenelzen" target="_self"" rel="noopener">www.linkedin.com/in/cocodenelzen
 
 </a></p>
     </footer>
