linkedin link fixed

--- a/index.html
+++ b/index.html
@@ -280,10 +280,9 @@
       - Minimal, clean, and consistent with the bright theme
     -->
     <footer class="footer">
-      <p><strong>© 2026 CK den Elzen</strong> • c.denelzen@seclicks.com</p>
-      <p><strong>LinkedIn</strong> <a href="www.linkedin.com/in/cocodenelzen" target="_self"" rel="noopener">www.linkedin.com/in/cocodenelzen
-
-</a></p>
+      <p><strong>© 2026 CK den Elzen</strong> • c.denelzen@seclicks.com
+      </p>
+      <p><strong>LinkedIn</strong> <a href="www.linkedin.com/in/cocodenelzen" target="_blank">https://www.linkedin.com/in/cocodenelzen</a></p>
     </footer>
   </body>
 </html>
