--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <footer class="footer">
       <p><strong>© 2026 CK den Elzen</strong> • c.denelzen@seclicks.com
       </p>
-      <p><strong>LinkedIn</strong> <a href="www.linkedin.com/in/cocodenelzen" target="_blank">https://www.linkedin.com/in/cocodenelzen</a></p>
+      <p><strong>LinkedIn</strong> <a href="https://www.linkedin.com/in/cocodenelzen" target="_blank">linkedin.com/in/cocodenelzen</a></p>
     </footer>
   </body>
 </html>
