added more experiences

--- a/index.html
+++ b/index.html
@@ -189,6 +189,22 @@
               <p class="badge badge__criteo">Criteo</p>
               <h3 class="card-title">Campaign Manager</h3>
               <p class="card-text">
+                I managed campaigns for the largest client in the EMEA region, translating performance data into clear insights and actionable improvement plans.
+              </p>
+            </article>
+
+            <article class="card">
+              <p class="badge badge__criteo">Criteo</p>
+              <h3 class="card-title">Customer Success Manager</h3>
+              <p class="card-text">
+                I supported internal stakeholder coordination across tech, analytics, and design, ensuring client deadlines and quality standards were consistently met.
+              </p>
+            </article>
+
+            <article class="card">
+              <p class="badge badge__criteo">Criteo</p>
+              <h3 class="card-title">Customer Care Specialist • Intern</h3>
+              <p class="card-text">
                 Started as an intern and grew into a full-time role, with international experience along the way.
               </p>
             </article>
