removed strong text from footer

--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
       - Minimal, clean, and consistent with the bright theme
     -->
     <footer class="footer">
-      <p><strong>© 2026 CK den Elzen</strong> • c.denelzen@seclicks.com
+      <p>© 2026 CK den Elzen • c.denelzen@seclicks.com
       </p>
-      <p><strong>LinkedIn</strong> <a href="https://www.linkedin.com/in/cocodenelzen" target="_blank">linkedin.com/in/cocodenelzen</a></p>
+      <p>LinkedIn <a href="https://www.linkedin.com/in/cocodenelzen" target="_blank">linkedin.com/in/cocodenelzen</a></p>
     </footer>
   </body>
 </html>
