--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,17 @@
       </nav>
     </header>
 
+    <section class="band band--paper">
+      <div class="container">
+        <header class="section-header">
+          <h2>Topic</h2>
+          <p>Published</p>
+        </header>
+        <div>
 
+        </div>
+      </div>
+    </section>
 
 
 
@@ -63,8 +73,10 @@
       
     </main>
 
-    <footer>
-
+    <footer class="footer">
+      <p>© 2026 CK den Elzen • c.denelzen@seclicks.com
+      </p>
+      <p>LinkedIn <a href="https://www.linkedin.com/in/cocodenelzen" target="_blank">linkedin.com/in/cocodenelzen</a></p>
     </footer>
   </body>
 
