--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#goals">Goals</a></li>
-          <li><a href="./blog.html" target="_blank">Blog</a></li>
+          <li><a href="./blog.html" target="_self">Blog</a></li>
         </ul>
       </nav>
     </header>
