--- a/blog.html
+++ b/blog.html
@@ -45,12 +45,8 @@
         </figure>
 
         <ul class="topbar__menu">
-          <li><a href="#about">About</a></li>
-          <li><a href="#story">My Story</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#goals">Goals</a></li>
-          <li><a href="./blog.html" target="_blank">Blog</a></li>
+          <li><a href="./index.html">Portfolio</a></li>
+          <li><a href="./blog.html" target="_self">Blog</a></li>
         </ul>
       </nav>
     </header>
