some small tweaks

--- a/blog.html
+++ b/blog.html
@@ -51,11 +51,10 @@
       </nav>
     </header>
 
-    <section class="band band--paper">
+    <section class="band band--paper band--blog">
       <div class="container">
         <header class="section-header">
-          <h2>Topic</h2>
-          <p>Published</p>
+          <h2>Blog Posts by: CK den Elzen</h2>
         </header>
       <div class="tiles">
         <article class="tile">
